--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,12 +7,19 @@
                 <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">
                     {% include './icons/pencil-fill.svg' %}
                 </a>
+                <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">
+                    {% include './icons/trash.svg' %}
+                </a>
             {% endif %}
         </aside>
         {% if post.published_date %}
-            <time class="date">
+            <div class="date">
                 {{ post.published_date }}
-            </time>
+            </div>
+        {% else %}
+            <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">
+                {% include './icons/link.svg' %} Publish
+            </a>
         {% endif %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.text|linebreaksbr }}</p>
