--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,6 +17,11 @@
                     <a href="{% url 'post_draft_list' %}" class="top-menu">
                         {% include './icons/list-task.svg' %}
                     </a>
+                    <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+                {% else %}
+                    <a href="{% url 'login' %}" class="top-menu">
+                        {% include './icons/lock-fill.svg' %}
+                    </a>
                 {% endif %}
                 <h1><a href="/">Django Girls Blog</a></h1>
           </div>
